# cbngui

./: .gitignore  .gitmodules  README.md
.memory/: todo_meta.json  url_source_meta.json
code/gui/: CMakeLists.txt  CharacterOverlayState.h  CharacterWidget.cpp  CharacterWidget.h  InventoryOverlayState.h  InventoryWidget.cpp  InventoryWidget.h  README.md  data_binding_manager.cpp  data_binding_manager.h  debug.h  event_bus.cpp  event_bus.h  event_bus_adapter.cpp  event_bus_adapter.h  events.h  gui_manager.cpp  gui_manager.h  gui_renderer.cpp  gui_renderer.h  gui_settings.cpp  gui_settings.h  input_manager.cpp  input_manager.h  input_manager_example.cpp  input_system_documentation.md  json.h  map_widget.cpp  map_widget.h  mock_events.h  overlay_input_adapter.cpp  overlay_input_adapter.h  overlay_interaction_bridge.cpp  overlay_interaction_bridge.h  overlay_manager.cpp  overlay_manager.h  overlay_renderer.cpp  overlay_renderer.h  overlay_ui.cpp  overlay_ui.h  (+12 more)
docs/design/: README.md  character_widget.md  executive_summary.md  gui_architecture_design.md  gui_components_design.md  implementation_plan.md  inventory_widget.md  menu_system_design.md  menu_system_research_plan.md  project_completion_status.md  research_plan_final.md  research_plan_gui_architecture.md
docs/research/: cataclysm_architecture_analysis.md  cataclysm_architecture_plan.md  gui_framework_analysis.md  gui_integration_points.md  research_plan_gui_frameworks.md
